--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -2,3 +2,11 @@
   width: 100px;
   height: 100px;
 }
+
+.selectedPage:hover,
+.pageNumber:hover {
+  cursor: pointer;
+}
+.selectedPage {
+  font-weight: bold;
+}
