--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,11 @@
 .descriptionBlock {
-  padding: 10px;
+    padding: 10px;
+}
+
+.namePhoto {
+    max-width: 200px;
+}
+
+.contact {
+    padding-left: 10px;
 }
